--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "dependencies": {
-    "bulma": "^0.9.4"
+    "@rails/webpacker": "5.4.4",
+    "bulma": "^0.9.4",
+    "webpack": "4.46.0",
+    "webpack-cli": "3.3.12"
   },
   "devDependencies": {
-    "@vizuaalog/bulmajs": "^0.12.2"
+    "@vizuaalog/bulmajs": "^0.12.2",
+    "webpack-dev-server": "3"
   }
 }
