--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.4.0",
     "@rails/webpacker": "5.4.4",
     "bulma": "^0.9.4",
     "webpack": "4.46.0",
